Removing all tabs and updating to AMD copyright
Signed-off-by: Chris Lavin <chris.lavin@amd.com>